[package]
name = "alphazero-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["cuda", "wgpu", "autodiff"] }
crossterm = "0.29.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ratatui = "0.29.0"
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
shakmaty = { version = "0.29.0", features = ["serde"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
serde-big-array = "0.5.1"
moka = { version = "0.12.10", features = ["future"] }